--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.11",
     "vue": "^3.2.29",
